--- a/client/src/components/Account/SignIn/SignInForm.module.scss
+++ b/client/src/components/Account/SignIn/SignInForm.module.scss
@@ -26,7 +26,7 @@
   form {
     background: #fff;
     padding: 10px 0px;
-    height: 380px;
+    height: 400px;
     width: 400px;
     box-shadow: 0px 8px 24px rgba(#1a1a1a, 0.2);
     font-family: Arial, Helvetica, sans-serif;
@@ -84,6 +84,21 @@
           font-size: 14px;
         }
       }
+      .inputShow {
+        display: flex;
+        span {
+          display: flex; /* Để các phần tử bên trong span nằm trên cùng một hàng */
+        }
+        p {
+          font-size: 14px;
+          color: black;
+          margin-left: 10px; 
+        }
+        input {
+          cursor: pointer;
+        }
+      }
+      
       .btn-first {
         padding: 15px 0px;
         background: rgba(#805740, 0.6);
