--- a/client/src/components/Home/home.module.scss
+++ b/client/src/components/Home/home.module.scss
@@ -810,7 +810,7 @@
                 font-size: 14px;
               }
             }
-            .owl {
+            .slick {
               width: 100%;
               height: 75%;
               padding-top: 15px;
