--- a/client/src/components/Home/home.module.scss
+++ b/client/src/components/Home/home.module.scss
@@ -83,6 +83,7 @@
               }
             }
           }
+          //logout
           :last-child {
             display: flex;
             justify-content: center;
@@ -92,7 +93,7 @@
               padding: 15px 0px;
               position: absolute;
               bottom: 0;
-              color: #fff;
+              color: #000;
               font-size: 25px;
             }
             &:hover {
