--- a/client/src/components/Home/formLogOut/FormLogOut.module.scss
+++ b/client/src/components/Home/formLogOut/FormLogOut.module.scss
@@ -25,10 +25,10 @@
       border-radius: 4px;
       border: 1px solid rgba($color: gray, $alpha: 0.2);
       transform: scaleY(0) scaleX(0);
-      transition: all 0.3s;
+      transition: all 0.5s;
       &.active {
         transform-origin: center;
-        transform: scaleY(1) scaleX(1) !important;
+        transform: scaleY(1) scaleX(1) ;
       }
       .header {
         width: 100%;
@@ -46,7 +46,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            transform: translateX(-50%) translateY(-50%);
+            transform: translateX(calc(-50% - 10px)) translateY(-50%);
             :hover {
               background: rgba($color: gray, $alpha: 0.2);
             }
@@ -98,8 +98,10 @@
               font-weight: bold;
               cursor: pointer;
               position: relative;
+
+              //doc
               &::after {
-                content: "";
+                content: "Xac nhan";
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -109,8 +111,9 @@
                 opacity: 0;
                 transition: all 0.4s ease-out;
               }
+              //ngang
               &::before {
-                content: "";
+                content: "zzz";
                 position: absolute;
                 top: 0;
                 left: 0;
