--- a/client/src/components/Home/home.module.scss
+++ b/client/src/components/Home/home.module.scss
@@ -236,6 +236,7 @@
               }
             }
             .list-mess {
+              background-color: blue;
               height: 78%;
               .messParent {
                 width: 100%;
@@ -835,6 +836,7 @@
             }
           }
           .second {
+            background-color: red;
             width: 100%;
             height: 100%;
             display: flex;
@@ -925,7 +927,8 @@
                 position: relative;
                 height: 73%;
                 border-bottom: 1px solid rgba(gray, 0.3);
-                background: #f4f5f7;
+                // background: #f4f5f7;
+                background-color: green;
                 // overflow-y: auto;
                 overflow-x: hidden;
                 * {
@@ -940,6 +943,7 @@
                   align-items: flex-start;
                   overflow-x: hidden;
                   &.message_own {
+                    // background-color: red;
                     justify-content: flex-end;
                     align-items: flex-end;
                     overflow-x: hidden;
@@ -1805,7 +1809,6 @@
               border-radius: 50%;
             }
           }
-      
           .container_mess {
             position: relative;
             max-width: 90%;
@@ -1831,6 +1834,7 @@
                 }
               }
             }
+
             .message {
               width: 100%;
               background: rgba(#f0e562, 0.6);
@@ -1977,7 +1981,7 @@
             }
           }
         }
-      
+        //DANH CHO CHAT NGUOI KHAC
         .avatar {
           margin-right: 10px;
           img {
@@ -1998,9 +2002,7 @@
           // }
           @media (min-width: 1200px) {
             // width: 7%;
-            &.activeMargin992 {
-              //margin-left: 10px;
-            }
+
           }
         }
         .container_mess {
