--- a/client/src/components/Home/home.module.scss
+++ b/client/src/components/Home/home.module.scss
@@ -836,7 +836,6 @@
             }
           }
           .second {
-            background-color: red;
             width: 100%;
             height: 100%;
             display: flex;
@@ -869,6 +868,7 @@
                 border-bottom: 1px solid rgba(gray, 0.3);
                 justify-content: space-between;
                 .topName {
+                  color: black;
                   // width: 70%;
                   display: flex;
                   align-items: center;
